// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DisplayContentContribution Accordions should not fail if no summary tag 1`] = `
<div>
  <div>
    <div
      class="fr-my-3w"
    >
      <div
        class="fr-accordions-group"
        data-fr-group="false"
      >
        <section
          class="fr-accordion"
        >
          <h3
            class="fr-accordion__title"
          >
            <button
              aria-controls="report-ou-suspension-du-preavis-collapse"
              aria-expanded="false"
              class="fr-accordion__btn"
              id="report-ou-suspension-du-preavis__toggle-btn"
              type="button"
            >
              Report ou suspension du préavis
            </button>
          </h3>
          <div
            class="fr-collapse"
            id="report-ou-suspension-du-preavis-collapse"
          >
            <div>
              <p>
                
        En principe, le préavis de licenciement court de date à date sans
        interruption, ni suspension. Dans certaines situations, il existe des
        exceptions qui peuvent suspendre le déroulement du préavis.
      
              </p>
              <div
                class="fr-my-3w"
              >
                <div
                  class="fr-accordions-group"
                  data-fr-group="false"
                >
                  <section
                    class="fr-accordion"
                  >
                    <h4
                      class="fr-accordion__title"
                    >
                      <button
                        aria-controls="fb3e4700-1a45-42e0-9277-15475b951211-collapse"
                        aria-expanded="false"
                        class="fr-accordion__btn"
                        id="fb3e4700-1a45-42e0-9277-15475b951211__toggle-btn"
                        type="button"
                      >
                        Congés payés
                      </button>
                    </h4>
                    <div
                      class="fr-collapse"
                      id="fb3e4700-1a45-42e0-9277-15475b951211-collapse"
                    >
                      <div>
                        <div
                          class="fr-my-3w"
                        >
                          <div
                            class="fr-accordions-group"
                            data-fr-group="false"
                          >
                            <section
                              class="fr-accordion"
                            >
                              <h5
                                class="fr-accordion__title"
                              >
                                <button
                                  aria-controls="44f5add2-42a4-4bec-8845-5e3e658473b9-collapse"
                                  aria-expanded="false"
                                  class="fr-accordion__btn"
                                  id="44f5add2-42a4-4bec-8845-5e3e658473b9__toggle-btn"
                                  type="button"
                                >
                                  
                Dates des congés fixées avant la notification du licenciement
              
                                </button>
                              </h5>
                              <div
                                class="fr-collapse"
                                id="44f5add2-42a4-4bec-8845-5e3e658473b9-collapse"
                              >
                                <div>
                                  <p>
                                    
                Des congés payés qui interviennent pendant le préavis et qui ont
                été demandés à l'employeur avant la notification du licenciement
                suspendent le préavis. Par conséquent, le préavis est prolongé
                d'une durée équivalente à celle des congés.
              
                                  </p>
                                </div>
                              </div>
                            </section>
                            <section
                              class="fr-accordion"
                            >
                              <h5
                                class="fr-accordion__title"
                              >
                                <button
                                  aria-controls="d0aa7deb-a17e-478e-97cc-6b35300dc578-collapse"
                                  aria-expanded="false"
                                  class="fr-accordion__btn"
                                  id="d0aa7deb-a17e-478e-97cc-6b35300dc578__toggle-btn"
                                  type="button"
                                >
                                  
                Dates des congés fixées après la notification du licenciement
              
                                </button>
                              </h5>
                              <div
                                class="fr-collapse"
                                id="d0aa7deb-a17e-478e-97cc-6b35300dc578-collapse"
                              >
                                <div>
                                  <p>
                                    
                Des congés payés qui interviennent pendant le préavis et qui ont
                été demandés à l'employeur après la notification du
                licenciement ne suspendent pas le préavis. Par conséquent, le
                préavis n'est pas prolongé d'une durée équivalente à celle des
                congés.
              
                                  </p>
                                </div>
                              </div>
                            </section>
                            <section
                              class="fr-accordion"
                            >
                              <h5
                                class="fr-accordion__title"
                              >
                                <button
                                  aria-controls="ea238161-2712-4e62-bde2-410e4b904934-collapse"
                                  aria-expanded="false"
                                  class="fr-accordion__btn"
                                  id="ea238161-2712-4e62-bde2-410e4b904934__toggle-btn"
                                  type="button"
                                >
                                  Licenciement notifié pendant les congés payés
                                </button>
                              </h5>
                              <div
                                class="fr-collapse"
                                id="ea238161-2712-4e62-bde2-410e4b904934-collapse"
                              >
                                <div>
                                  <p>
                                    
                Dans ce cas, le préavis ne commencera qu'après les congés payés.
              
                                  </p>
                                </div>
                              </div>
                            </section>
                          </div>
                        </div>
                      </div>
                    </div>
                  </section>
                </div>
              </div>
            </div>
          </div>
        </section>
      </div>
    </div>
  </div>
</div>
`;

exports[`DisplayContentContribution Accordions should replace details element by one accordion 1`] = `
<div>
  <div
    class="fr-my-3w"
  >
    <div
      class="fr-accordions-group"
      data-fr-group="false"
    >
      <section
        class="fr-accordion"
      >
        <h3
          class="fr-accordion__title"
        >
          <button
            aria-controls="ceci-est-un-titre-collapse"
            aria-expanded="false"
            class="fr-accordion__btn"
            id="ceci-est-un-titre__toggle-btn"
            type="button"
          >
            Ceci est un titre
          </button>
        </h3>
        <div
          class="fr-collapse"
          id="ceci-est-un-titre-collapse"
        >
          <div>
            <p>
              Ceci est le body
            </p>
            <br />
          </div>
        </div>
      </section>
    </div>
  </div>
</div>
`;

exports[`DisplayContentContribution Accordions should replace details element within details element 1`] = `
<div>
  <div
    class="fr-my-3w"
  >
    <div
      class="fr-accordions-group"
      data-fr-group="false"
    >
      <section
        class="fr-accordion"
      >
        <h3
          class="fr-accordion__title"
        >
          <button
            aria-controls="ceci-est-un-titre-collapse"
            aria-expanded="false"
            class="fr-accordion__btn"
            id="ceci-est-un-titre__toggle-btn"
            type="button"
          >
            Ceci est un titre
          </button>
        </h3>
        <div
          class="fr-collapse"
          id="ceci-est-un-titre-collapse"
        >
          <div>
            <div
              class="fr-my-3w"
            >
              <div
                class="fr-accordions-group"
                data-fr-group="false"
              >
                <section
                  class="fr-accordion"
                >
                  <h4
                    class="fr-accordion__title"
                  >
                    <button
                      aria-controls="8dec1493-8d8a-4c7d-bade-12c7d13ae062-collapse"
                      aria-expanded="false"
                      class="fr-accordion__btn"
                      id="8dec1493-8d8a-4c7d-bade-12c7d13ae062__toggle-btn"
                      type="button"
                    >
                      Ceci est un sous titre
                    </button>
                  </h4>
                  <div
                    class="fr-collapse"
                    id="8dec1493-8d8a-4c7d-bade-12c7d13ae062-collapse"
                  >
                    <div>
                      <p>
                        Ceci est le body
                      </p>
                      <br />
                    </div>
                  </div>
                </section>
              </div>
            </div>
          </div>
        </div>
      </section>
    </div>
  </div>
</div>
`;

exports[`DisplayContentContribution Accordions should replace multiple details element by one accordion 1`] = `
<body>
  <div>
    <div>
      <div
        class="fr-my-3w"
      >
        <div
          class="fr-accordions-group"
          data-fr-group="false"
        >
          <section
            class="fr-accordion"
          >
            <h3
              class="fr-accordion__title"
            >
              <button
                aria-controls="ceci-est-le-titre-1-collapse"
                aria-expanded="false"
                class="fr-accordion__btn"
                id="ceci-est-le-titre-1__toggle-btn"
                type="button"
              >
                Ceci est le titre 1
              </button>
            </h3>
            <div
              class="fr-collapse"
              id="ceci-est-le-titre-1-collapse"
            >
              <div>
                <p>
                  Ceci est le body 1
                </p>
                <br />
              </div>
            </div>
          </section>
          <section
            class="fr-accordion"
          >
            <h3
              class="fr-accordion__title"
            >
              <button
                aria-controls="ceci-est-le-titre-2-collapse"
                aria-expanded="false"
                class="fr-accordion__btn"
                id="ceci-est-le-titre-2__toggle-btn"
                type="button"
              >
                Ceci est le titre 2
              </button>
            </h3>
            <div
              class="fr-collapse"
              id="ceci-est-le-titre-2-collapse"
            >
              <div>
                <p>
                  Ceci est le body 2
                </p>
                <br />
              </div>
            </div>
          </section>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`DisplayContentContribution Alerts should have space in table item for a strong and an other content 1`] = `
<div>
  <table
    class="sc-4e3ba411-0 kGLBMt"
  >
    <tbody>
      <tr>
        <td
          colspan="1"
          rowspan="1"
        >
          <p>
            <strong>
              Salariés
            </strong>
          </p>
        </td>
        <td
          colspan="1"
          rowspan="1"
        >
          <p>
            Une journée entière déterminée par roulement et par quinzaine
          </p>
        </td>
        <td
          colspan="1"
          rowspan="2"
        >
          <p>
            Pour les commerces avec une surface de vente 
            <strong>
              supérieure à 400 m2
            </strong>
            ,
            <strong />
            la loi prévoit une majoration de salaire d’au moins 30 % par rapport au salaire normalement dû pour une durée équivalente
          </p>
          <p>
            Pour les commerces avec une surface de vente 
            <strong>
              inférieure ou égale à 400 m2
            </strong>
            , la loi ne prévoit aucune majoration de salaire. Mais l’employeur, s’il le souhaite, ou un 
            <webcomponent-tooltip
              content="Accord%20conclu%20entre%20un%20employeur%20ou%20des%20repr%C3%A9sentants%20d%E2%80%99employeurs%20et%20une%20ou%20plusieurs%20organisations%20syndicales%20ou%20des%20repr%C3%A9sentants%20de%20salari%C3%A9s%2C%20ou%20dans%20certains%20cas%2C%20%C3%A0%20la%20suite%20de%20la%20consultation%20des%20salari%C3%A9s%2C%20en%20respectant%20des%20r%C3%A8gles%20de%20validit%C3%A9%20issues%20du%20code%20du%20travail.%20Il%20peut%20%C3%AAtre%20conclu%20%C3%A0%20plusieurs%20niveaux%20%3A%20branche%20professionnelle%2C%20groupe%2C%20entreprise%2C%20%C3%A9tablissement...%20L%E2%80%99accord%20collectif%20concerne%20un%20ou%20plusieurs%20th%C3%A8mes%20contrairement%20%C3%A0%20la%20convention%20collective%20qui%20traite%20de%20l%E2%80%99ensemble%20des%20conditions%20d%E2%80%99emploi%2C%20de%20travail%20et%20de%20formation%20professionnelle%20et%20des%20garanties%20sociales%20des%20salari%C3%A9s.%20"
            >
              accord collectif
            </webcomponent-tooltip>
            , peuvent le prévoir.
          </p>
        </td>
      </tr>
      <tr>
        <td
          colspan="1"
          rowspan="1"
        >
          <p>
            <strong>
              Salariés de moins de 21 ans logés chez leur employeur
            </strong>
          </p>
        </td>
        <td
          colspan="1"
          rowspan="1"
        >
          <p>
            Un autre après-midi déterminé par roulement et par quinzaine
          </p>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`DisplayContentContribution Alerts should replace div with alert class in li component to Alert component 1`] = `
<div>
  <div>
    <p>
      Le contrat de mission (intérim) doit :
    </p>
    <ul>
      <li
        class="DisplayContentContribution__StyledLi-sc-c2bbc7a4-1 SBjaL"
      >
        <p
          class="fr-mb-0"
        >
          Être
          <strong>
             écrit
          </strong>
           et 
          <strong>
            rédigé
          </strong>
           en français (si conclu en France) ;
        </p>
      </li>
      <li
        class="DisplayContentContribution__StyledLi-sc-c2bbc7a4-1 SBjaL"
      >
        <p
          class="fr-mb-0"
        >
          Être 
          <strong>
            signé
          </strong>
          , dans un délai de 
          <strong>
            2 jours
          </strong>
           suivant la mise à disposition du salarié auprès de l'entreprise ; si l’employeur transmet le CDD au salarié après le délai de 2 jours, il s'expose au paiement d'une indemnité égale à 1 mois de salaire maximum.
        </p>
      </li>
      <li
        class="DisplayContentContribution__StyledLi-sc-c2bbc7a4-1 SBjaL"
      >
        <p
          class="fr-mb-0"
        >
          Être établi 
          <strong>
            en plusieurs exemplaires
          </strong>
           ; c'est-à-dire autant d'exemplaires que de parties au contrat. Chaque partie au contrat aura un exemplaire.
        </p>
        <br />
        <div
          class="fr-alert fr-alert--info fr-alert--sm"
          id="fr-alert-:rh:"
        >
          <div>
            <p>
              <strong>
                Attention : 
              </strong>
              En l’absence d’écrit, l’employeur peut être condamné à une amende de 3.750 € ou 7.500 € en cas de récidive.
            </p>
          </div>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`DisplayContentContribution Alerts should replace div with alert class to Alert component 1`] = `
<div>
  <div
    class="fr-alert fr-alert--info fr-alert--sm"
    id="fr-alert-:rg:"
  >
    <div>
      <p>
        <strong>
          Attention : 
        </strong>
        En l’absence d’écrit, l’employeur peut être condamné à une amende de 3.750 € ou 7.500 € en cas de récidive.
      </p>
    </div>
  </div>
</div>
`;

exports[`DisplayContentContribution Headings should replace span with class "title" and "sub-titles" with heading 1`] = `
<div>
  <div>
    <h2>
      Mon titre
    </h2>
    <h3>
      Mon sous titre
    </h3>
  </div>
</div>
`;

exports[`DisplayContentContribution Tables should add thead to table if not present and move table into a Table element 1`] = `
<div>
  <div
    class="fr-table--md fr-table"
  >
    <div
      class="fr-table__wrapper"
    >
      <div
        class="fr-table__container"
      >
        <div
          class="fr-table__content"
        >
          <table>
            <caption
              class="fr-hidden"
            >
              
              
            </caption>
            <thead>
              <tr>
                <th
                  colspan="1"
                  rowspan="1"
                />
                <th
                  colspan="1"
                  rowspan="1"
                >
                  <p>
                    Titre 1
                  </p>
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td
                  colspan="1"
                  rowspan="1"
                >
                  <p>
                    Pour les 
                    <strong>
                      cadres
                    </strong>
                    , la prolongation ...
                  </p>
                </td>
                <td
                  colspan="1"
                  rowspan="1"
                >
                  <ul>
                    <li>
                      <p>
                        L’employeur et le salarié donnent par écrit ou par mail.
                      </p>
                    </li>
                  </ul>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DisplayContentContribution Tables should keep whitespace in specific tag 1`] = `
<div>
  <p>
    Ceci est un
    <strong>
       
    </strong>
    texte généré
    <strong>
       
    </strong>
    par 
    <em>
      tiptap 
    </em>
    avec des
    <em>
       
    </em>
    résidus
    <em>
       
    </em>
    de balise
  </p>
</div>
`;

exports[`DisplayContentContribution Tables should not change if thead is already present 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          colspan="1"
          rowspan="1"
        >
          <p>
            Pour les 
            <strong>
              cadres
            </strong>
            , la prolongation ...
          </p>
        </td>
        <td
          colspan="1"
          rowspan="1"
        >
          <ul>
            <li>
              <p
                class="fr-mb-0"
              >
                L’employeur et le salarié donnent par écrit ou par mail.
              </p>
            </li>
          </ul>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`DisplayContentContribution Tables should render correctly a table with multiple head lines 1`] = `
<div>
  <div>
    <div
      class="fr-table--md fr-table"
    >
      <div
        class="fr-table__wrapper"
      >
        <div
          class="fr-table__container"
        >
          <div
            class="fr-table__content"
          >
            <table>
              <caption
                class="fr-hidden"
              >
                
      
              </caption>
              <thead>
                <tr>
                  <th
                    colspan="1"
                    rowspan="2"
                  >
                    <p>
                      <strong>
                        Nature du contrat de mission
                      </strong>
                    </p>
                  </th>
                  <th
                    colspan="2"
                    rowspan="1"
                  >
                    <p>
                      <strong>
                        Durée maximale
                      </strong>
                    </p>
                  </th>
                </tr>
                <tr>
                  <th
                    colspan="1"
                    rowspan="1"
                  >
                    <p>
                      <strong>
                        Contrat de date à date
                      </strong>
                    </p>
                  </th>
                  <th
                    colspan="1"
                    rowspan="1"
                  >
                    <p>
                      <strong>
                        Contrat sans terme certain
                      </strong>
                    </p>
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td
                    colspan="1"
                    rowspan="1"
                  >
                    <p>
                      Remplacement d’un salarié absent ou dont le contrat de travail est suspendu
                    </p>
                  </td>
                  <td
                    colspan="1"
                    rowspan="1"
                  >
                    <p>
                      18 mois
                    </p>
                  </td>
                  <td
                    colspan="1"
                    rowspan="1"
                  >
                    <p>
                      Fin de l’absence
                    </p>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DisplayContentContribution Tables should replace td by th in thead 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          colspan="1"
          rowspan="1"
        >
          <p>
            Pour les 
            <strong>
              cadres
            </strong>
            , la prolongation ...
          </p>
        </td>
        <td
          colspan="1"
          rowspan="1"
        >
          <ul>
            <li>
              <p
                class="fr-mb-0"
              >
                L’employeur et le salarié donnent par écrit ou par mail.
              </p>
            </li>
          </ul>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`DisplayContentContribution should keep whitespace in specific tag 1`] = `
<div>
  <p>
    Ceci est un
    <strong>
       
    </strong>
    texte généré
    <strong>
       
    </strong>
    par 
    <em>
      tiptap 
    </em>
    avec des
    <em>
       
    </em>
    résidus
    <em>
       
    </em>
    de balise
  </p>
</div>
`;

exports[`DisplayContentContribution should not remove space between strong and em tag in p tag 1`] = `
<div>
  <p>
    <strong>
      À noter :
    </strong>
     
    <em>
      L'échelon professionnel du salarié est habituellement mentionné 
    </em>
  </p>
</div>
`;

exports[`DisplayContentContribution should return html 1`] = `
<div>
  <p>
    hello
  </p>
</div>
`;
